--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main class="container">
         <section id="amazonia">
             <h2>Amazônia</h2>
-            <img src="https://example.com/imagem-amazonia.jpg" alt="Amazônia" />
+            <img src="img/download.jpg" alt="Amazônia" />
             <p>A Amazônia é a maior floresta tropical do mundo, rica em biodiversidade e cultura.</p>
         </section>
 
